<resources>
    <string name="app_name">iFace</string>
    <string name="input">Input</string>
    <string name="camera_permission_not_granted">Camera app cannot do anything without camera permission.</string>
    <string name="clock">Clock</string>
    <string name="clock_in">Clock in</string>
    <string name="clock_out">Clock out</string>
    <string name="phone_number">Phone number</string>
    <string name="user_name">User name</string>
    <string name="input_success">Input success</string>
    <string name="input_error">Input error</string>
    <string name="login_in">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="age">Age</string>
    <string name="register_error">Register user error.</string>
    <string name="phone_number_cannot_empty">Phone number cannot empty.</string>
    <string name="header_cannot_empty">Header cannot empty.</string>
    <string name="email_cannot_empty">Email cannot empty.</string>
    <string name="email_format_error">Email format error.</string>
    <string name="phone_number_format_error">Phone number format error.</string>
    <string name="user_name_cannot_empty">User name cannot empty.</string>
    <string name="age_cannot_empty">Age cannot empty.</string>
    <string name="password_cannot_empty">Passrowd cannot empty.</string>
    <string name="age_format_error">Age format error.</string>
    <string name="register_success">Register user success.</string>
    <string name="registering">Registering...</string>
    <string name="api_register_error">Api register error.</string>
    <string name="clocking">Clocking...</string>
    <string name="logging">Logging in</string>
    <string name="login_error">Login error.</string>
    <string name="login_out">Login out.</string>
    <string name="login_success">Login success.</string>
    <string name="face_login">Face login.</string>
    <string name="login_fail">Phone number or password error.</string>
    <string name="no_same_face_with_library">There is no such user in the face database.</string>
    <string name="clock_success">Clock success.</string>
    <string name="clock_error">Clock error.</string>
    <string name="clock_fail">Clock fail.</string>
    <string name="clock_record">Clock record</string>
    <string name="get_attend_record_fail">Get attend record fail.</string>
    <string name="switch_login_mode">Switch login mode.</string>
    <string name="success">Success</string>
    <string name="late">Late</string>
    <string name="leave_early">Leave early</string>
</resources>