<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center">

        <RelativeLayout
                android:layout_margin="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/clock_record_item_user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_name"/>

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/clock_record_item_phone_number"
                    android:layout_alignParentEnd="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_number"/>

        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/clock_record_item_check_time"
                android:layout_margin="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clock"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>