<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints">

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                tools:ignore="MissingConstraints">

            <xyz.zzyitj.iface.ui.CircleImageView
                    android:id="@+id/fragment_input_head"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/header"/>

        </LinearLayout>

        <EditText
                android:id="@+id/fragment_input_phone_number"
                android:ems="10"
                android:hint="@string/phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <EditText
                android:id="@+id/fragment_input_user_name"
                android:ems="10"
                android:hint="@string/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <Button
                android:id="@+id/fragment_input_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>